fix: ajusta infra